syntax = "proto3";
//Options for the GRPC
option java_multiple_files = true;
option java_package = "ds.waterpollutiontracker";
option java_outer_classname = "WaterPollutionTrackerImpl";
package waterpollutiontracker;

service WaterPollutionTracker {
// RPC to retrieve historical water pollution data
	rpc GetWaterPollutionHistory (WaterPollutionHistoryRequest) returns (stream
	WaterPollutionLevel) {
	}
	// RPC to retrieve water pollution alerts triggered by the system
	rpc GetWaterPollutionAlerts (WaterPollutionAlertsRequest) returns
	(WaterPollutionAlertsResponse) {
	}
	// Bidirectional streaming RPC to monitor water pollution in real-time
	rpc MonitorWaterPollution (stream WaterPollutionMonitorRequest) returns (stream
	WaterPollutionLevel) {
	}
}

message WaterPollutionHistoryRequest {
	int64 start_time = 1;
	int64 end_time = 2;
	string location = 3;
}

message WaterPollutionAlertsRequest {
	int32 threshold = 1;
	string location = 2;
}

message WaterPollutionAlertsResponse {
	repeated WaterPollutionAlert alerts = 1;
}

message WaterPollutionAlert {
	string location = 1;
	string pollution_type = 2;
	float pollution_level = 3;
	string timestamp = 4;
}

message WaterPollutionMonitorRequest {
	string location = 1;
}

message WaterPollutionLevel {
	string location = 1;
	string pollution_type = 2;
	float pollution_level = 3;
	string timestamp = 4;
}
